# skillbox

./: .gitignore
Lesson_11_6/Task_1/: main.cpp
Lesson_11_6/Task_2/: main.cpp
Lesson_11_6/Task_3/: main.cpp
Lesson_11_6/Task_4/: main.cpp
Lesson_11_6/Task_5/: main.cpp
Lesson_12_6/Task_1/: main.cpp
Lesson_12_6/Task_2/: main.cpp
Lesson_12_6/Task_3/: main.cpp
Lesson_12_6/Task_4/: main.cpp
Lesson_13_1/Task_1/: main.cpp
Lesson_13_1/Task_2/: main.cpp
Lesson_13_1/Task_3/: main.cpp
Lesson_13_2/Task_1/: main.cpp
Lesson_13_2/Task_2/: main.cpp
Lesson_13_2/Task_3/: main.cpp
Lesson_13_3/Task_1/: main.cpp
Lesson_13_3/Task_2/: main.cpp
Lesson_13_4/Task_1/: main.cpp
Lesson_13_4/Task_2/: main.cpp
Lesson_13_4/Task_3/: main.cpp
Lesson_13_6/Task_1/: main.cpp
Lesson_13_6/Task_2/: main.cpp
Lesson_13_6/Task_3/: main.cpp
Lesson_14_6/Task_1/: main.cpp
Lesson_14_6/Task_2/: main.cpp
Lesson_14_6/Task_3/: main.cpp
Lesson_14_6/Task_4/: main.cpp
Lesson_14_6/Task_5/: main.cpp
Lesson_14_6/Task_6/: main.cpp
Lesson_14_6/Task_7/: CMakeLists.txt  main.cpp
Lesson_14_6/Task_8/: CMakeLists.txt  main.cpp
Lesson_14_6/Task_9/: CMakeLists.txt  main.cpp
Lesson_15_6/Task_1/: main.cpp
Lesson_15_6/Task_2/: main.cpp
Lesson_15_6/Task_3/: main.cpp
Lesson_15_6/Task_4/: main.cpp
Lesson_16_4/Task_1/: main.cpp
Lesson_16_4/Task_2/: main.cpp
Lesson_16_4/Task_3/: main.cpp
Lesson_16_4/Task_4/: CMakeLists.txt  main.cpp
Lesson_16_4/Task_5/: main.cpp
Lesson_17_4/Task_1_Lesson_17_4/: CMakeLists.txt  main.cpp
Lesson_17_4/Task_2_Lesson_17_4/: CMakeLists.txt  main.cpp
Lesson_17_4/Task_3_Lesson_17_4/: CMakeLists.txt  main.cpp
Lesson_18_5/Task_1_Lesson_18_5/: CMakeLists.txt  main.cpp
Lesson_18_5/Task_2_Lesson_18_5/: CMakeLists.txt  main.cpp
Lesson_18_5/Task_3_Lesson_18_5/: CMakeLists.txt  main.cpp
Lesson_18_5/Task_4_Lesson_18_5/: CMakeLists.txt  main.cpp
Lesson_19_5/Task_1_Lesson_19_5/: CMakeLists.txt  main.cpp  words.txt
Lesson_19_5/Task_2_Lesson_19_5/: CMakeLists.txt  main.cpp  test.txt  test_1.txt
Lesson_23_4/Task_1/: main.cpp
Lesson_25_4/: Test.txt
Lesson_30_4/Task_1/: CMakeLists.txt  main.cpp
Lesson_32_5/Task_2/: CMakeLists.txt  main.cpp  movielist.json
Lesson_32_5/Test/: CMakeLists.txt  main.cpp  scratch.json
Lesson_32_5/Test_2/: CMakeLists.txt  main.cpp  record.proto  tempate proto.txt
Lesson_33_5/Test_3/: CMakeLists.txt  main.cpp
(+263 files in other folders)
